update title to Pepper - The Chicken

--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Run, Chicken, Run!</title>
+    <title>Pepper - The Chicken</title>
     <script src="src/Sprite.js"></script>
     <style>
         body {
