move run function to Run.js file

--- a/game.html
+++ b/game.html
@@ -262,12 +262,9 @@
         run();
       }
 
-      function run() {
-        update();
-        draw();
-        window.requestAnimationFrame(run);
-      }
+
   </script>
+  <script src="src/Run.js"></script>
   <script src="src/Update.js"></script>
   <script src="src/Draw.js"></script>
   <script>
