move ground object to Ground.js file

--- a/game.html
+++ b/game.html
@@ -39,27 +39,9 @@
         fall: new Audio("src/sounds/fall.wav"),
         scream: new Audio("src/sounds/chicken-scream.mp3"),
         start: new Audio("src/sounds/start.mp3")
-      },
-
-      ground = {
-        x: 0,
-        y: 500,
-        height: 50,
-
-        update: function() {
-          this.x -= speed;
-          if (this.x <= -128) {
-              this.x = 0;
-          }
-        },
-
-        draw: function() {
-          for (let count = 0, size = 5; count <= size; count++) {
-              sand.draw(this.x + sand.width * count, this.y);
-          }
-        }
       }
   </script>
+  <script src="src/Ground.js"></script>
   <script src="src/Chicken.js"></script>
   <script src="src/Obstacles.js"></script>
   <script src="src/Controls.js"></script>
