move sounds object to Sounds.js file

--- a/game.html
+++ b/game.html
@@ -29,18 +29,9 @@
         start: 0,
         playing: 1,
         lost: 2
-      },
-
-      sounds = {
-        music: new Audio("src/sounds/music.mp3"),
-        score: new Audio("src/sounds/score.wav"),
-        jump: new Audio("src/sounds/jump.wav"),
-        collision: new Audio("src/sounds/collision.mp3"),
-        fall: new Audio("src/sounds/fall.wav"),
-        scream: new Audio("src/sounds/chicken-scream.mp3"),
-        start: new Audio("src/sounds/start.mp3")
       }
   </script>
+  <script src="src/Sounds.js"></script>
   <script src="src/Ground.js"></script>
   <script src="src/Chicken.js"></script>
   <script src="src/Obstacles.js"></script>
