move initial vars and states object to Config.js file

--- a/game.html
+++ b/game.html
@@ -21,16 +21,7 @@
   </head>
 
   <body>
-    <script>
-      let canvas, context, WIDTH, HEIGHT, maxJump = 3, speed = 6,
-      currentState, rank, img,
-
-      states = {
-        start: 0,
-        playing: 1,
-        lost: 2
-      }
-  </script>
+  <script src="src/Config.js"></script>
   <script src="src/Sounds.js"></script>
   <script src="src/Ground.js"></script>
   <script src="src/Chicken.js"></script>
