improve organization of the code

--- a/game.html
+++ b/game.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Pepper - The Chicken</title>
+
     <script src="src/Config.js"></script>
     <script src="src/Sounds.js"></script>
     <script src="src/Sprite.js"></script>
@@ -14,6 +15,7 @@
     <script src="src/Run.js"></script>
     <script src="src/Update.js"></script>
     <script src="src/Draw.js"></script>
+
     <style>
       body {
         background-color: #F5F5F5;
@@ -29,10 +31,9 @@
       }
     </style>
   </head>
-
   <body>
-  <script>
-    main();
-  </script>
+    <script>
+      main()
+    </script>
   </body>
 </html>
