move css to main.css file

--- a/game.html
+++ b/game.html
@@ -16,20 +16,7 @@
     <script src="src/Update.js"></script>
     <script src="src/Draw.js"></script>
 
-    <style>
-      body {
-        background-color: #F5F5F5;
-      }
-      canvas {
-        position: absolute;
-        top: 0px;
-        bottom: 0px;
-        left: 0px;
-        right: 0px;
-        margin: auto;
-        box-shadow: 2px 2px 10px #616161;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="src/css/main.css"/>
   </head>
   <body>
     <script>
