--- a/game.html
+++ b/game.html
@@ -14,6 +14,7 @@
     <script src="src/Main.js"></script>
     <script src="src/Run.js"></script>
     <script src="src/Update.js"></script>
+    <script src="src/DrawScore.js"></script>
     <script src="src/Draw.js"></script>
 
     <link rel="stylesheet" type="text/css" href="src/css/main.css"/>
