--- a/game.html
+++ b/game.html
@@ -7,6 +7,7 @@
     <script src="src/Config.js"></script>
     <script src="src/Sounds.js"></script>
     <script src="src/Sprite.js"></script>
+    <script src="src/Difficulty.js"></script>
     <script src="src/Ground.js"></script>
     <script src="src/Chicken.js"></script>
     <script src="src/Obstacles.js"></script>
