update to work with Background.js

--- a/game.html
+++ b/game.html
@@ -8,6 +8,7 @@
     <script src="src/Sounds.js"></script>
     <script src="src/Sprite.js"></script>
     <script src="src/Difficulty.js"></script>
+    <script src="src/Background.js"></script>
     <script src="src/Ground.js"></script>
     <script src="src/Chicken.js"></script>
     <script src="src/Obstacles.js"></script>
