add auto focus to iframe

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </a>
 
     <section id="game">
-      <iframe src="game.html"></iframe>
+      <iframe id="game_frame" src="game.html"></iframe>
     </section>
 
     <section id="footer">
@@ -75,3 +75,5 @@
    </section>
   </body>
 </html>
+
+<script>document.getElementById("game_frame").focus()</script>
