add facebook meta tags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta property="og:title" content="Pepper - The Chicken"/>
+    <meta property="og:description" content="A simple game that looks like Flappy Bird built in HTML5 and JavaScript."/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://daltonmenezes.github.io/pepper-the-chicken/"/>
+    <meta property="og:image" content="https://daltonmenezes.github.io/pepper-the-chicken/src/sprites/pepper-fb.png"/>
+
     <title>Pepper - The Chicken</title>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
