add name meta tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta property="og:url" content="https://daltonmenezes.github.io/pepper-the-chicken/"/>
     <meta property="og:image" content="https://daltonmenezes.github.io/pepper-the-chicken/src/sprites/pepper-fb.png"/>
 
+    <meta name="description" content="Pepper - The Chicken is a simple and open source game that looks like Flappy Bird written in HTML5 and JavaScript.">
+    <meta name="keywords" content="pepper, chicken, game, platform, javascript, html5, opensource, github">
+    <meta name="author" content="Dalton Menezes">
+
     <title>Pepper - The Chicken</title>
 
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
