--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <title>Pepper - The Chicken</title>
 
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="src/css/index.css"/>
   </head>
