--- a/game.html
+++ b/game.html
@@ -13,6 +13,7 @@
     <script src="src/Chicken.js"></script>
     <script src="src/Obstacles.js"></script>
     <script src="src/Controls.js"></script>
+    <script src="src/CanvasCreator.js"></script>
     <script src="src/Main.js"></script>
     <script src="src/Run.js"></script>
     <script src="src/Update.js"></script>
