Add facebook button to share the score on facebook

--- a/game.html
+++ b/game.html
@@ -17,12 +17,14 @@
     <script src="src/Main.js"></script>
     <script src="src/Run.js"></script>
     <script src="src/Update.js"></script>
+    <script src="src/SocialScoreShare.js"></script>
     <script src="src/DrawScore.js"></script>
     <script src="src/Draw.js"></script>
 
     <link rel="stylesheet" type="text/css" href="src/css/main.css"/>
   </head>
   <body>
+    <button id="facebook" onmousedown="socialScoreShare()">Share score on Facebook</button>
     <script>
       main()
     </script>
