Sound toggle feature and Indentation of all JS files.
I have added a new feature: Sound toggle. Now, all sounds and music can
be disabled to play without any sound.

I have indented JS files using IntelliJ Idea auto indentation

--- a/game.html
+++ b/game.html
@@ -19,6 +19,7 @@
     <script src="src/Update.js"></script>
     <script src="src/SocialScoreShare.js"></script>
     <script src="src/DrawScore.js"></script>
+    <script src="src/DrawSoundControl.js"></script>
     <script src="src/Draw.js"></script>
 
     <link rel="stylesheet" type="text/css" href="src/css/main.css"/>
