--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="src/css/index.css"/>
+    
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-2979084487962618",
+        enable_page_level_ads: true
+      });
+    </script>
   </head>
   <body>
     <section id="background"></section>
@@ -32,6 +40,17 @@
     <section id="footer">
       <span>Developed by <a href="http://daltonmenezes.github.io/" target="_blank">Dalton Menezes</a></span>
    </section>
+    
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-80235286-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>    
   </body>
 </html>
 
