--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-87724453-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      
+      gtag('js', new Date());
+      gtag('config', 'UA-87724453-2');
+    </script>
     <meta charset="utf-8">
     <meta property="og:title" content="Pepper - The Chicken"/>
     <meta property="og:description" content="Pepper - The Chicken is a simple and open source game that looks like Flappy Bird written in HTML5 and JavaScript."/>
